@@ -51,6 +51,15 @@ To compile the project (optional):
 mvn javafx:compile
 ```
 
+Alternatively, the `maven-compiler-plugin` can be used:
+
+```
+mvn compile
+```
+
+Note that including this plugin is convenient for a better 
+project integration within your IDE.
+
 To run the project:
 
 ```
@@ -67,7 +76,7 @@ target/image/bin/java -m hellofx/org.openjfx.App
 
 ### javafx:compile options
 
-Optionally, when compiling with ``javafx:compile``, the source level, 
+When compiling with ``javafx:compile``, the source level, 
 target level and/or the release level for the Java compiler can be set. 
 The default value is 11.
 
@@ -82,6 +91,23 @@ This configuration changes these levels to 12, for instance:
         <source>12</source>
         <target>12</target>
         <release>12</release>
+        <mainClass>org.openjfx.hellofx/org.openjfx.App</mainClass>
+    </configuration>
+</plugin>
+```
+
+If required, compiler arguments can be set. For instance:
+
+```
+<plugin>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-maven-plugin</artifactId>
+    <version>0.0.2</version>
+    <configuration>
+        <compilerArgs>
+            <arg>--add-exports</arg>
+            <arg>javafx.graphics/com.sun.glass.ui=org.openjfx.hellofx</arg>
+        </compilerArgs>
         <mainClass>org.openjfx.hellofx/org.openjfx.App</mainClass>
     </configuration>
 </plugin>
@@ -121,6 +147,30 @@ For instance, the following configuration adds some VM options and a command lin
 </plugin>
 ```
 
+**Note**
+
+It is possible to use a local SDK instead of Maven Central. 
+This is helpful for developers trying to test a local build of OpenJFX. 
+Since transitive dependencies are not resolved, 
+all the required jars needs to be added as a separate dependency, like:
+
+```
+<properties>
+    <sdk>/path/to/javafx-sdk</sdk>
+</properties>
+
+<dependencies>
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx.base</artifactId>
+        <version>1.0</version>
+        <scope>system</scope>
+        <systemPath>${sdk}/lib/javafx.base.jar</systemPath>
+    </dependency>
+    ...
+</dependencies>
+```
+
 ### javafx:jlink options
 
 The same command line options for `jlink` can be set:
@@ -138,7 +188,7 @@ The same command line options for `jlink` can be set:
 - `jlinkImageName`: The name of the folder with the resulting runtime image
 - `jlinkZipName`: When set, creates a zip of the resulting runtime image
 - `jlinkExecutable`: The `jlink` executable. It can be a full path or the name of the executable, if it is in the PATH.
-
+- `jmodsPath`: When using a local JavaFX SDK, sets the path to the local JavaFX jmods
 
 For instance, with the following configuration:
 
